@@ -32,24 +32,24 @@
 // use M2 to create separate methods names for virtual and static)
 // The _PV variants are for the pure-virtual methods in the base class.
 #define ITM_READ_M(T, LSMOD, M, M2)                                         \
-  M _ITM_TYPE_##T ITM_REGPARM _ITM_##LSMOD##T##M2 (const _ITM_TYPE_##T *ptr)\
+  M _ITM_TYPE_##T ITM_REGPARM ITM_##LSMOD##T##M2 (const _ITM_TYPE_##T *ptr) \
   {                                                                         \
     return load(ptr, abi_dispatch::LSMOD);                                  \
   }
 
 #define ITM_READ_M_PV(T, LSMOD, M, M2)                                      \
-  M _ITM_TYPE_##T ITM_REGPARM _ITM_##LSMOD##T##M2 (const _ITM_TYPE_##T *ptr)\
+  M _ITM_TYPE_##T ITM_REGPARM ITM_##LSMOD##T##M2 (const _ITM_TYPE_##T *ptr) \
   = 0;
 
 #define ITM_WRITE_M(T, LSMOD, M, M2)                         \
-  M void ITM_REGPARM _ITM_##LSMOD##T##M2 (_ITM_TYPE_##T *ptr,\
+  M void ITM_REGPARM ITM_##LSMOD##T##M2 (_ITM_TYPE_##T *ptr, \
                                          _ITM_TYPE_##T val)  \
   {                                                          \
     store(ptr, val, abi_dispatch::LSMOD);                    \
   }
 
 #define ITM_WRITE_M_PV(T, LSMOD, M, M2)                      \
-  M void ITM_REGPARM _ITM_##LSMOD##T##M2 (_ITM_TYPE_##T *ptr,\
+  M void ITM_REGPARM ITM_##LSMOD##T##M2 (_ITM_TYPE_##T *ptr, \
                                          _ITM_TYPE_##T val)  \
   = 0;
 
@@ -99,20 +99,20 @@
 
 // Creates memcpy/memmove/memset methods.
 #define CREATE_DISPATCH_METHODS_MEM()  \
-virtual void _memtransfer(void *dst, const void* src, size_t size,    \
+virtual void memtransfer(void *dst, const void* src, size_t size,    \
     bool may_overlap, ls_modifier dst_mod, ls_modifier src_mod)       \
 {                                                                     \
-  _memtransfer_static(dst, src, size, may_overlap, dst_mod, src_mod); \
+  memtransfer_static(dst, src, size, may_overlap, dst_mod, src_mod); \
 }                                                                     \
-virtual void _memset(void *dst, int c, size_t size, ls_modifier mod)  \
+virtual void memset(void *dst, int c, size_t size, ls_modifier mod)  \
 {                                                                     \
-  _memset_static(dst, c, size, mod);                                  \
+  memset_static(dst, c, size, mod);                                  \
 }
 
 #define CREATE_DISPATCH_METHODS_MEM_PV()  \
-virtual void _memtransfer(void *dst, const void* src, size_t size,       \
+virtual void memtransfer(void *dst, const void* src, size_t size,       \
     bool may_overlap, ls_modifier dst_mod, ls_modifier src_mod) = 0;     \
-virtual void _memset(void *dst, int c, size_t size, ls_modifier mod) = 0;
+virtual void memset(void *dst, int c, size_t size, ls_modifier mod) = 0;
 
 
 // Creates ABI load/store functions that can target either a class or an
@@ -120,13 +120,13 @@ virtual void _memset(void *dst, int c, size_t size, ls_modifier mod) = 0;
 #define ITM_READ(T, LSMOD, TARGET, M2)                                 \
   _ITM_TYPE_##T ITM_REGPARM _ITM_##LSMOD##T (const _ITM_TYPE_##T *ptr) \
   {                                                                    \
-    return TARGET##ITM_##LSMOD##T##M2(ptr);                            \
+    return TARGET ITM_##LSMOD##T##M2(ptr);                            \
   }
 
 #define ITM_WRITE(T, LSMOD, TARGET, M2)                                    \
   void ITM_REGPARM _ITM_##LSMOD##T (_ITM_TYPE_##T *ptr, _ITM_TYPE_##T val) \
   {                                                                        \
-    TARGET##ITM_##LSMOD##T##M2(ptr, val);                                  \
+    TARGET ITM_##LSMOD##T##M2(ptr, val);                                  \
   }
 
 // Creates ABI load/store functions for all load/store modifiers for a
@@ -144,12 +144,12 @@ virtual void _memset(void *dst, int c, size_t size, ls_modifier mod) = 0;
 #define ITM_MEMTRANSFER_DEF(TARGET, M2, NAME, READ, WRITE) \
 void ITM_REGPARM _ITM_memcpy##NAME(void *dst, const void *src, size_t size)  \
 {                                                                            \
-  TARGET##memtransfer##M2 (dst, src, size,                                   \
+  TARGET memtransfer##M2 (dst, src, size,                                   \
              false, GTM::abi_dispatch::WRITE, GTM::abi_dispatch::READ);      \
 }                                                                            \
 void ITM_REGPARM _ITM_memmove##NAME(void *dst, const void *src, size_t size) \
 {                                                                            \
-  TARGET##memtransfer##M2 (dst, src, size,                                   \
+  TARGET memtransfer##M2 (dst, src, size,                                   \
       GTM::abi_dispatch::memmove_overlap_check(dst, src, size,               \
           GTM::abi_dispatch::WRITE, GTM::abi_dispatch::READ),                \
       GTM::abi_dispatch::WRITE, GTM::abi_dispatch::READ);                    \
@@ -158,7 +158,7 @@ void ITM_REGPARM _ITM_memmove##NAME(void *dst, const void *src, size_t size) \
 #define ITM_MEMSET_DEF(TARGET, M2, WRITE) \
 void ITM_REGPARM _ITM_memset##WRITE(void *dst, int c, size_t size) \
 {                                                                  \
-  TARGET##memset##M2 (dst, c, size, GTM::abi_dispatch::WRITE);     \
+  TARGET memset##M2 (dst, c, size, GTM::abi_dispatch::WRITE);     \
 }                                                                  \
 
 
@@ -210,7 +210,7 @@ void ITM_REGPARM _ITM_memset##WRITE(void *dst, int c, size_t size) \
   _ITM_TYPE_##T ITM_REGPARM _ITM_##LSMOD##T (const _ITM_TYPE_##T *ptr)\
   {                                                                   \
     _ITM_TYPE_##T v;                                                  \
-    TARGET##memtransfer##M2(&v, ptr, sizeof(_ITM_TYPE_##T), false,    \
+    TARGET memtransfer##M2(&v, ptr, sizeof(_ITM_TYPE_##T), false,    \
         GTM::abi_dispatch::NONTXNAL, GTM::abi_dispatch::LSMOD);       \
     return v;                                                         \
   }
@@ -218,7 +218,7 @@ void ITM_REGPARM _ITM_memset##WRITE(void *dst, int c, size_t size) \
 #define ITM_WRITE_MEMCPY(T, LSMOD, TARGET, M2)                            \
   void ITM_REGPARM _ITM_##LSMOD##T (_ITM_TYPE_##T *ptr, _ITM_TYPE_##T val)\
   {                                                                       \
-    TARGET##memtransfer##M2(ptr, &val, sizeof(_ITM_TYPE_##T), false,      \
+    TARGET memtransfer##M2(ptr, &val, sizeof(_ITM_TYPE_##T), false,      \
         GTM::abi_dispatch::LSMOD, GTM::abi_dispatch::NONTXNAL);           \
   }
 
